--- a/applications/account-db-data-service/src/main/resources/webroot/index.html
+++ b/applications/account-db-data-service/src/main/resources/webroot/index.html
@@ -2,30 +2,18 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Running Examples from Live War</title>
+    <title>Caching Approach to Legacy RDMS Data Transformation - Showcase</title>
     <script type="text/javascript" src="js/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="js/jquery.timer.js"></script>
     <script type="text/javascript" src="js/time.js"></script>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" type="image/png" href="images/jetty-avatar.png" />
+    <link rel="icon" type="image/png" href="https://d1fto35gcfffzn.cloudfront.net/tanzu/labs-logo-tanzu-style.svg" style="width: 50px;"/>
 </head>
 <body>
-<img class="avatar" src="images/jetty-avatar.png" />
-<h1>Running Examples from Jetty Live War</h1>
+<img class="avatar" src="https://d1fto35gcfffzn.cloudfront.net/tanzu/labs-logo-tanzu-style.svg" />
+<h1>Caching Approach to Legacy RDMS Data Transformation - Showcase</h1>
 <p>
-    The following time stamps are being updated in 3 different ways.
+
 </p>
-<h4>Updated from JavaScript <code>Date.toLocaleTimeString()</code></h4>
-<div class="time">
-    <span id="timeJsDate"></span>
-</div>
-<h4>Updated from <code>/time/</code> Servlet</h4>
-<div class="time">
-    <span id="timeServlet"></span>
-</div>
-<h4>Updated from <code>time</code> WebSocket</h4>
-<div class="time">
-    <span id="timeWebSocket"></span>
-</div>
 </body>
 </html>
