Cleanup and refactoring

--- a/applications/account-db-data-service/src/main/resources/webroot/index.html
+++ b/applications/account-db-data-service/src/main/resources/webroot/index.html
@@ -10,9 +10,13 @@
     <link rel="icon" type="image/png" href="https://d1fto35gcfffzn.cloudfront.net/tanzu/labs-logo-tanzu-style.svg" style="width: 50px;"/>
 </head>
 <body>
-<img class="avatar" src="https://d1fto35gcfffzn.cloudfront.net/tanzu/labs-logo-tanzu-style.svg" />
+<img width="100" class="avatar" src="https://d1fto35gcfffzn.cloudfront.net/tanzu/labs-logo-tanzu-style.svg" width="100"/>
 <h1>Caching Approach to Legacy RDMS Data Transformation - Showcase</h1>
 <p>
+
+    <ul>
+
+</ul>
 
 </p>
 </body>
